--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+  background-color: #0c0d0c;
+}
 body {
   background-color: #0c0d0c;
 
